--- a/Sanssoussi/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/Sanssoussi/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -6,5 +6,31 @@
 
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <p class="text-danger">This account has been locked out, please try again in :</p>
+    <p class="text-danger" id="countdown"></p>
 </header>
+<script>
+    var minutesToAdd = 2;
+    var currentDate = new Date();
+    var countDownDate = new Date(currentDate.getTime() + minutesToAdd * 60000);
+
+    var x = setInterval(function() {
+
+      var now = new Date().getTime();
+
+      var distance = countDownDate - now;
+
+      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      document.getElementById("countdown").innerHTML = minutes + "m " + seconds + "s ";
+
+      if (distance < 0) {
+        clearInterval(x);
+            document.getElementById("countdown").innerHTML = "Account Unlocked";
+      }
+    }, 1000);
+
+</script>
